Update hello.html added x=5

--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,9 @@
 <body>
     <p> 
         <h1>welcome to the git app </h1> </p>
+    <script>
+        let x =5
+    </script>
     
 </body>
 </html>
